# cv-s00005824

./: .gitignore  Dockerfile.cpu  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: baseline_svm.yaml  sh17.yaml  train_yolo.yaml
data/: README.md
models/: README.md
notebooks/: 01_data_exploration.ipynb  02_preprocessing_augmentation.ipynb  03_hog_svm_baseline.ipynb  04_yolo_training.ipynb  05_evaluation_failure_analysis.ipynb  06_realtime_demo.ipynb
reports/: classical_baseline_results.md  dataset_audit.md  evaluation_summary.md  failure_analysis.md  technical_analysis.md  yolo_results.md
reports/metrics/: baseline_metrics.json  yolo_metrics.json  yolo_results.csv
scripts/: _bootstrap.py  download_dataset.py  evaluate_yolo.py  make_examples.py  prepare_dataset.py  run_inference.py  train_baseline.py  train_yolo.py
src/: __init__.py  classical_model.py  compliance.py  config.py  convert.py  data.py  evaluate.py  features.py  inference.py  postprocess.py  preprocessing.py  visualization.py  yolo_train.py
tests/: conftest.py  test_compliance.py  test_convert.py  test_environment.py  test_preprocessing.py
